--- a/plugins/de.ovgu.featureide.fm.core/build.properties
+++ b/plugins/de.ovgu.featureide.fm.core/build.properties
@@ -19,8 +19,5 @@ bin.includes = META-INF/,\
                lib/javaSmt/listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar,\
                lib/javaSmt/smtinterpol-2.5-66-g453d36e.jar,\
                lib/javaSmt/spotbugs-annotations-3.1.9-sources.jar,\
-               lib/native/x86_64-linux/,\
-               lib/native/x86_64-macosx/,\
-               lib/native/x86_64-windows/,\
-               lib/native/x86-windows/
+               lib/javaSmt/com.microsoft.z3.jar
 bin.excludes = lib/cover.exe
