Fixed the opening of velvet models and most of the error. However, building is still not possible.

--- a/plugins/de.ovgu.featureide.fm.core/plugin.xml
+++ b/plugins/de.ovgu.featureide.fm.core/plugin.xml
@@ -48,7 +48,7 @@
       </fmFormat>
       <fmFormat
             class="de.ovgu.featureide.fm.core.io.velvet.VelvetFeatureModelFormat"
-            id="de.ovgu.featureide.fm.core.format.VelvetFeatureModelFormat"
+            id="de.ovgu.featureide.fm.core.format.fm.VelvetFeatureModelFormat"
             name="Velvet">
       </fmFormat>
       <fmFormat
