Add parser jar to classpath

--- a/plugins/de.ovgu.featureide.fm.core/build.properties
+++ b/plugins/de.ovgu.featureide.fm.core/build.properties
@@ -6,5 +6,6 @@ bin.includes = META-INF/,\
                schema/,\
                lib/,\
                plugin.xml,\
-               lib/commons-math-2.2.jar
+               lib/commons-math-2.2.jar,\
+               lib/uvl-parser.jar
 bin.excludes = lib/cover.exe
