--- a/plugins/de.ovgu.featureide.fm.core/.classpath
+++ b/plugins/de.ovgu.featureide.fm.core/.classpath
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="lib/uvl-parser.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-math-2.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/splar.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/annotations.jar"/>
@@ -9,7 +10,11 @@
 	<classpathentry exported="true" kind="lib" path="lib/org.sat4j.core.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/SPLCAT.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/org.sat4j.pb.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="output" path="bin"/>
