--- a/plugins/de.ovgu.featureide.fm.ui/plugin.xml
+++ b/plugins/de.ovgu.featureide.fm.ui/plugin.xml
@@ -94,6 +94,17 @@
 		   </property>
 		</content-type>
   <content-type
+        base-type="org.eclipse.core.runtime.text"
+        file-extensions="uvl"
+        id="de.ovgu.featureide.fm.ui.extendedfeatureModel"
+        name="Extended Feature Model"
+        priority="high">
+     <property
+           default="de.ovgu.featureide.fm.core.format.fm.UVLFeatureModelFormat"
+           name="de.ovgu.featureide.fm.ui.contentType.format">
+     </property>
+  </content-type>
+  <content-type
         base-type="org.eclipse.core.runtime.xml"
         describer="de.ovgu.featureide.fm.ui.editors.XMLFeatureModelContentDescriber"
         file-extensions="xml"
