--- a/plugins/de.ovgu.featureide.ui/plugin.xml
+++ b/plugins/de.ovgu.featureide.ui/plugin.xml
@@ -121,7 +121,7 @@
 	</extension>
 
 	<extension point="org.eclipse.core.contenttype.contentTypes">
-		<content-type base-type="org.eclipse.core.runtime.xml"
+		<content-type base-type="org.eclipse.jdt.core.javaSource"
 				file-extensions="jak"
 				id="de.ovgu.featureide.contenttype.jak"
 				name="Jak (for FeatureIDE projects)"
@@ -149,20 +149,6 @@
 		</content-type>
 	</extension>
 
-	<extension
-			point="org.eclipse.ui.editors">
-		<editor
-				class="de.ovgu.featureide.ui.editors.JavaEditor"
-				contributorClass="org.eclipse.ui.editors.text.TextEditorActionContributor"
-				default="true"
-				icon="icons/JakFileIcon.png"
-				id="de.ovgu.featureide.ui.editors.JakEditor"
-				name="Jak Editor">
-			<contentTypeBinding
-					contentTypeId="de.ovgu.featureide.contenttype.jak">
-			</contentTypeBinding>
-		</editor>
-	</extension>
 	<extension
 			point="org.eclipse.help.contexts">
 		<contexts
