--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,19 @@
-sudo: false
-
 language: java
-dist: trusty
-
-env:  
-  global:
-    - DISPLAY=:99.0
-
-before_install:
-  - sh -e /etc/init.d/xvfb start - sleep 10
 
 jdk: oraclejdk8
 
-cache:
-  directories:
-  - $HOME/.m2
+env: DISPLAY=:99.0
 
 install: true
+
+before_install:
+ - sudo apt-get update
+
+before_script:
+ - sh -e /etc/init.d/xvfb start
+ - sleep 10 # give xvfb some time to start
+ - metacity --sm-disable --replace &
+ - sleep 10 # give metacity some time to start
 
 script:
 - mvn -Pnu -Pgui clean verify
