--- a/gui-tests/de.ovgu.featureide.fm.gui-tests-swtbot/build.properties
+++ b/gui-tests/de.ovgu.featureide.fm.gui-tests-swtbot/build.properties
@@ -1,4 +1,9 @@
 source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .
+               .,\
+               .classpath,\
+               .project,\
+               .settings/,\
+               build.properties,\
+               src/
