--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ install: true
 
 before_install:
  - sudo apt-get update
+ - sudo apt-get install gnome-themes-standard
+ - sudo apt-get install metacity
+ - sudo apt-get install libwebkit-dev
 
 before_script:
  - sh -e /etc/init.d/xvfb start
