--- a/pom.xml
+++ b/pom.xml
@@ -270,8 +270,8 @@
 
 	<repositories>
 		<repository>
-			<id>oxygen</id>
-			<url>http://download.eclipse.org/releases/oxygen</url>
+			<id>latest</id>
+			<url>http://download.eclipse.org/releases/latest</url>
 			<layout>p2</layout>
 		</repository>
 	</repositories>
