--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,10 @@ env:
     - DISPLAY=:99.0
 
 before_install:
- - sh -e /etc/init.d/xvfb start
- - sleep 10 # give xvfb some time to start
+  - sudo apt-get update
+  - sudo apt-get xvfb
+  - sh -e /etc/init.d/xvfb start
+  - sleep 10 # give xvfb some time to start
 
 jdk: openjdk11
 
