--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ env:
 before_install:
   - sudo apt-get update
   - sudo apt-get xvfb
-  - sh -e /etc/init.d/xvfb start
+  - sh -e xvfb start
   - sleep 10 # give xvfb some time to start
 
 jdk: openjdk11
