--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: java
-dist: focal
+dist: bionic
 
 services:
   - xvfb
@@ -13,7 +13,7 @@ cache:
 install: true
 
 script:
-  - xvfb-run mvn -Pnu -Pgui clean verify
+  - mvn -Pnu -Pgui clean verify
 
 after_failure:
   - find -name "*.txt" | grep -F 'surefire-reports' | xargs cat
