added extension point for views in feature ide perspective, added attribute view as extension

--- a/plugins/de.ovgu.featureide.fm.attributes/plugin.xml
+++ b/plugins/de.ovgu.featureide.fm.attributes/plugin.xml
@@ -122,4 +122,10 @@
             nature="FeatureIDE_Core.FeatureModelingNature">
       </composer>
    </extension>
+   <extension
+         point="de.ovgu.featureide.ui.views">
+      <viewid
+            id="de.ovgu.featureide.fm.attributes.view.FeatureAttributeView">
+      </viewid>
+   </extension>
 </plugin>
