--- a/plugins/de.ovgu.featureide.ui/plugin.xml
+++ b/plugins/de.ovgu.featureide.ui/plugin.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.2"?>
 <plugin>
+   <extension-point id="de.ovgu.featureide.ui.views" name="Views" schema="schema/de.ovgu.featureide.ui.views.exsd"/>
 	<extension
 			point="org.eclipse.ui.newWizards">
 		<wizard
