added extension point to open feature attribute view when an extended feature model is opened

--- a/plugins/de.ovgu.featureide.fm.attributes/plugin.xml
+++ b/plugins/de.ovgu.featureide.fm.attributes/plugin.xml
@@ -128,4 +128,10 @@
             id="de.ovgu.featureide.fm.attributes.view.FeatureAttributeView">
       </viewid>
    </extension>
+   <extension
+         point="de.ovgu.featureide.fm.ui.FMEditorListener">
+      <listener
+            class="de.ovgu.featureide.fm.attributes.view.FeatureModelEditorListener">
+      </listener>
+   </extension>
 </plugin>
