--- a/plugins/de.ovgu.featureide.fm.core/build.properties
+++ b/plugins/de.ovgu.featureide.fm.core/build.properties
@@ -5,7 +5,5 @@ bin.includes = META-INF/,\
                src/,\
                schema/,\
                lib/,\
-               plugin.xml,\
-               lib/commons-math-2.2.jar,\
-               lib/uvl-parser.jar
+               plugin.xml
 bin.excludes = lib/cover.exe
