--- a/plugins/de.ovgu.featureide.ui/plugin.xml
+++ b/plugins/de.ovgu.featureide.ui/plugin.xml
@@ -1200,6 +1200,12 @@
          id="de.ovgu.featureide.fm.ui.actions.exportAs"
          label="Export As"
          style="push">
+      <visibleWhen
+            checkEnabled="false">
+         <reference
+               definitionId="de.ovgu.featureide.fm.ui.expressions.containsOnlyConfiguration">
+         </reference>
+      </visibleWhen>
    </command>
 		</menuContribution>
 
