--- a/tests/de.ovgu.featureide.fm.ui-test/pom.xml
+++ b/tests/de.ovgu.featureide.fm.ui-test/pom.xml
@@ -1,6 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<repositories>
+		<repository>
+		 <id>swtbot</id>
+   		 <url>https://download.eclipse.org/technology/swtbot/releases/3.1.0/</url>
+    	<layout>p2</layout>
+		</repository>
+	</repositories>
     <dependencies>
         <dependency>
             <groupId>de.ovgu.featureide</groupId>
