--- a/plugins/de.ovgu.featureide.core.featurehouse/plugin.xml
+++ b/plugins/de.ovgu.featureide.core.featurehouse/plugin.xml
@@ -35,7 +35,7 @@
 				<command
 						commandId="de.ovgu.featureide.core.featurehouse.ui.commands.metaproduct"
 						id="de.ovgu.featureide.core.featurehouse.ui.actions.meatproduct"
-						label="Build Metaproduct"
+						label="Generate Metaproduct"
 						style="toggle">
 					<visibleWhen
 							checkEnabled="false">
@@ -84,7 +84,7 @@
 			point="org.eclipse.ui.commands">
 		<command
 				id="de.ovgu.featureide.core.featurehouse.ui.commands.metaproduct"
-				name="Build Metaproduct">
+				name="Generate Metaproduct">
 			<state
 					class="org.eclipse.jface.commands.ToggleState"
 					id="org.eclipse.ui.commands.toggleState">
@@ -98,7 +98,7 @@
 	<extension
 			point="org.eclipse.ui.handlers">
 		<handler
-				class="de.ovgu.featureide.featurehouse.ui.handlers.BuildMetaProductHandler"
+				class="de.ovgu.featureide.featurehouse.ui.handlers.GenerateMetaProductHandler"
 				commandId="de.ovgu.featureide.core.featurehouse.ui.commands.metaproduct">
 		</handler>
 		<handler
