Moves UI classes to UI plug-ins

--- a/plugins/de.ovgu.featureide.ui/plugin.xml
+++ b/plugins/de.ovgu.featureide.ui/plugin.xml
@@ -1537,4 +1537,32 @@
 				OutlineProvider="de.ovgu.featureide.ui.views.collaboration.outline.ExtendedOutline">
 		</Outline>
 	</extension>
+	<extension
+         point="org.eclipse.ui.propertyPages">
+      <page
+            class="de.ovgu.featureide.ui.propertypage.BasePropertyPage"
+            id="de.ovgu.featureide.core.propertypage"
+            name="FeatureIDE">
+         <filter
+               name="projectNature"
+               value="de.ovgu.featureide.core.featureProjectNature">
+         </filter>
+         <enabledWhen>
+				<adapt type="org.eclipse.core.resources.IProject" />
+         </enabledWhen>
+      </page>  
+      <page
+            category="de.ovgu.featureide.core.propertypage"
+            class="de.ovgu.featureide.ui.propertypage.FeatureProjectPropertyPage"
+            id="de.ovgu.featureide.core.propertypage2"
+            name="Feature Project">
+         <filter
+               name="projectNature"
+               value="de.ovgu.featureide.core.featureProjectNature">
+         </filter>
+         <enabledWhen>
+				<adapt type="org.eclipse.core.resources.IProject" />
+         </enabledWhen>
+      </page>
+   </extension>
 </plugin>
